--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
+    
+    "start": "node app",
     "dev": "cross-env NODE_ENV=dev nodemon app"
   },
   "keywords": [],
